# IRIS-D

./: .gitignore  CLAUDE.md  DEPLOYMENT_GUIDE.md  DESIGN.md  ENHANCEMENT_SUMMARY.md  PROJECT_SUMMARY.md  README.md  app.py  auth.py  config.py  data_generator.py  data_prod_prompt  deploy.sh  main.py  posit-connect.yml  pyproject.toml  requirements.txt  test.py  test_app.py  test_enhanced_features.py
.claude/: settings.local.json
.github/workflows/: build-desktop.yml
assets/: command_palette.js  copilot.js  market_flip.js  playground.js  scrubber.js  style.css  tab_switch_v2.js
data/: alerts.csv  bank_risk.db  covenants.csv  datatidy_config.yaml  facilities.csv  user_profiles.json  user_roster.parquet
docs/: DEVELOPER_GUIDE.md
modules/auth/: user_management.py
modules/financial_projection/: __init__.py
modules/financial_trend/: __init__.py
modules/holdings/: __init__.py
modules/layout/: components.py
modules/location_analysis/: __init__.py  components.py
modules/model_backtesting/: __init__.py  components.py
modules/portfolio/: management.py
modules/portfolio_summary/: __init__.py  components.py
modules/portfolio_trend/: __init__.py
modules/sir_analysis/: __init__.py
modules/vintage/: __init__.py  components.py
packaging/: build.py  launcher.py
src/dashboard/: app.py  app_state.py  config.py
src/dashboard/auth/: user_management.py
src/dashboard/callbacks/: __init__.py  autosave_callbacks.py  custom_metric_callbacks.py  portfolio_callbacks.py  time_window_callbacks.py  user_callbacks.py
src/dashboard/components/: cards.py  controls.py  financial_projection.py  financial_trends.py  holdings.py  layout.py  location_analysis.py  portfolio_management.py  portfolio_summary.py  portfolio_trend.py  signals.py  toolbar.py  vintage_analysis.py
src/dashboard/data/: dataset.py  db_data_generator.py  loader.py  models.py  registry.py  sources.py
src/dashboard/tabs/: __init__.py  _template.py  _vintage_analysis.py  holdings.py  (+9 more)
tests/: conftest.py
tests/integration/: test_app.py
tests/unit/: test_app_state.py  test_custom_metrics.py  test_data_sources.py  test_dataset.py  test_models.py  test_registry.py
(+13 files in other folders)
